función reduce, aún división sin mostrar en forma fraccional